COH-31919: Add coherence-rag module to main (main -> ce/main)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 118710]